proj1/testing/error/rotorsOutOfOrder.inp
* B I Beta II III (AAAA)
HELLO WORLD